added max and min values

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -51,13 +51,13 @@ BankNoteAuthentication
                                 </blockquote>
                             </label>
                             <textarea class="form-control" name="variance" rows="1"
-                                placeholder="variance"></textarea>
+                                placeholder="variance  - 7.0421 to 6.8248"></textarea>
                             <textarea class="form-control" name="skewness" rows="1"
-                                placeholder="skewness"></textarea>
+                                placeholder="skewness - 13.7731 to 12.9516"></textarea>
                             <textarea class="form-control" name="curtosis" rows="1"
-                                placeholder="curtosis"></textarea>
+                                placeholder="curtosis  - 5.2861 to 17.9274"></textarea>
                             <textarea class="form-control" name="entropy" rows="1"
-                                placeholder="entropy"></textarea>
+                                placeholder="entropy   - 8.5482 to 2.4495"></textarea>
                         </div>
 
                         <!-- Select output language here. -->
